added some content
Changed displayed page to “about_me”.  Need to learn how to make it
look nice.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,12 @@
 {% extends "layouts/base.html" %}
 
+
+
+
+
 {% block content %}
-index
+Why is this showing?
+Perhaps index.html should be a page of links to other pages with different content?
+
+Hmmmmm...
 {% endblock %}
