--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Jake's Site</title>
+    <title>The Site of Jake... Duh duh duuuuuuuuuuuh</title>
   </head>
   <body>
     {% block page_header %}
