no luck adding css style sheet.

--- a/templates/about_me.html
+++ b/templates/about_me.html
@@ -13,6 +13,8 @@ I also do things.  Like build shit and take photos.  And stuff.
 Lots of stuff.  
 
 Banana.
+
+Here's a <a href="http://0.0.0.0:5000/index">link</a> to the index page.  
 {% endblock %}
 
 
