--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>The Site of Jake... Duh duh duuuuuuuuuuuh</title>
+    <link rel="stylesheet" type="text/css" href="static/styles.css"/>
   </head>
   <body>
     {% block page_header %}
