--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>The Site of Jake... Duh duh duuuuuuuuuuuh</title>
-    <link rel="stylesheet" type="text/css" href="static/styles.css"/>
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', 
+    filename='styles.css')}}"/>
   </head>
   <body>
     {% block page_header %}
