--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,7 @@
 {% extends "layouts/base.html" %}
 
-
-
-
-
 {% block content %}
-Why is this showing?
-Perhaps index.html should be a page of links to other pages with different content?
-
-Hmmmmm...
+<h1>
+  Now What?
+</h1>
 {% endblock %}
