--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -8,7 +8,8 @@
   <body>
     {% block page_header %}
     <header class="page-header">
-      <h1 class="logo-wrapper"><h1>
+      The name's Jacob Farnsworth,
+          No, you may not call me The Professor.
     </header>
     {% endblock page_header %}
 
@@ -17,7 +18,12 @@
     </div>
 
     {% block page_footer %}
-    <footer class="page-footer"></footer>
+    <footer class="page-footer">
+      Thanks for stopping by!
+      <a href="http://0.0.0.0:5000/about_me">About Me</a>
+      <a href="http://0.0.0.0:5000/resume">My Resume</a>
+      <a href="http://0.0.0.0:5000/index">Index</a>
+    </footer>
     {% endblock page_footer %}
   </body>
 </html>
