--- a/templates/resume.html
+++ b/templates/resume.html
@@ -8,23 +8,25 @@
 <h2>
   Education
 </h2>
-<p>
-  Bachelor of Music 2014 - Oberlin Conservatory of Music
-  major: baroque flute performance
-  Conservatory Dean's Scholar
-</p>
-<p>
-  CRR de Paris, France 2011-2012
-  French baroque music studies
-</p>
-<p>
-  Campus Langues, Paris, France 2012-2013
-  French language studies
-</p>
-<p>
-  Florida State University 2006-2008
-  coursework: general studies and flute performance
-</p>
+<ul>
+  <li>
+    <b>Obelrin Conservatory of Music</b>,<br><i>Bachelor of Music 2014</i>
+    <p>major: baroque flute performance
+      Conservatory Dean's Scholar</p>
+  </li>
+  <li>
+    <b>CRR de Paris, France</b>, <i>2011 - 2012</i>
+    <p>French baroque music studies</p>
+  </li>
+  <li>
+    <b>Campus Langues, Paris, France</b>,<br><i>2012 - 2013</i>
+    <p>French language studies</p>
+  </li>
+  <li>
+    <b>Florida STate University</b>, <i>2006 - 2008</i>
+    <p>coursework: general studies and flute performance</p>
+  </li>
+</ul>
 
 
 {% endblock %}
