--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -16,9 +16,11 @@
     {% endblock page_header %}
    
     <div id="menu">
-      <b><a href="/about_me">About Me</a></b><br>
-      <b><a href="/resume">My Resume</a></b><br>
-      <b><a href="/index">Index</a></b>
+      <span>
+        <a href="/about_me">About Me</a>
+        <a href="/resume">My Resume</a>
+        <a href="/index">Index</a>
+      </span>
     </div>
     
     {% block content %}
