--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -10,8 +10,7 @@
     <div class="header">
     {% block page_header %}
     <header>
-      The name's Jacob Farnsworth,
-          No, you may not call me The Professor.
+      Jacob Farnsworth, Programming and Web Design 
     </header></div>
     {% endblock page_header %}
    
