--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -7,30 +7,30 @@
   </head>
   <body>
     <div class="container">
-    <div class="header">
-    {% block page_header %}
-    <header>
-      Jacob Farnsworth, Programming and Web Design 
-    </header></div>
-    {% endblock page_header %}
+      <div class="header">
+      {% block page_header %}
+        <header>
+          Jacob Farnsworth, Programming and Web Design 
+        </header>
+      </div>
+      {% endblock page_header %} 
    
-    <div id="menu">
-      <span>
-        <a href="/about_me">About Me</a>
-        <a href="/resume">My Resume</a>
-        <a href="/index">Index</a>
-      </span>
-    </div>
+      <div id="menu">
+        <span>
+          <a href="/about_me">About Me</a>
+          <a href="/resume">My Resume</a>
+          <a href="/index">Index</a>
+        </span>
+      </div>
     
-    {% block content %}
-    <div class="page-content"></div>
-    {% endblock %}
+      {% block content %}
+      <div class="page-content"></div>
+      {% endblock %}
+    </div>
     {% block page_footer %}
     <div class="page-footer">
-    <footer>
-      Thanks for stopping by!
-  </footer></div>
+      this is a footer
+    </div>
     {% endblock page_footer %}
-  </div>
   </body>
 </html>
