--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -29,7 +29,7 @@
     </div>
     {% block page_footer %}
     <div class="page-footer">
-      this is a footer
+      this is my foot
     </div>
     {% endblock page_footer %}
   </body>
