text overlapping footer

--- a/static/style.css
+++ b/static/style.css
@@ -8,7 +8,7 @@ html, body {
   font-family: courier;
   margin: 0 auto;
   position: relative;
-  height: 600px; 
+  height: 100%; 
   max-width: 800px;
   text-align: left;
 }
@@ -20,7 +20,6 @@ html, body {
 
 #menu {
   background-color: #F0F0C0;
-  height: 20px;
   width: 100%;
   text-align: center;
   clear: both;
@@ -37,5 +36,4 @@ html, body {
   max-width: 800px;
   text-align: center;
   margin: 0 auto;
-  margin-bottom: -100px;
 }
