--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -24,7 +24,8 @@
       </div>
     
       {% block content %}
-      <div class="page-content"></div>
+      <div class="page-content">
+      </div>
       {% endblock %}
     </div>
     {% block page_footer %}
