--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -2,36 +2,37 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>The Site of Jake... Duh duh duuuuuuuuuuuh</title>
+    <title>Jacob Farnsworth</title>
     <link rel="stylesheet" type="text/css" href="/static/style.css"/>
   </head>
   <body>
     <div class="container">
       <div class="header">
-      {% block page_header %}
-        <header>
-          Jacob Farnsworth, Programming and Web Design 
-        </header>
+        {% block page_header %}
+        <menu>
+          Jacob Farnsworth, Programming and Web Design
+        </menu>
+        {% endblock page_header %}
       </div>
-      {% endblock page_header %} 
-   
       <div id="menu">
-        <span>
-          <a href="/about_me">About Me</a>
-          <a href="/resume">My Resume</a>
-          <a href="/index">Index</a>
-        </span>
+        <menu>
+          <span>
+            <a href="/about_me">Who Am I?</a>
+            <a href="/resume">Hire Me</a>
+            <a href="/index">Index</a>
+          </span>
+        </menu>
       </div>
-    
-      {% block content %}
       <div class="page-content">
+        {% block content %}
+        {% endblock %}
       </div>
-      {% endblock %}
+      <div class="page-footer">
+        {% block page_footer %}
+        this is my foot
+        {% endblock page_footer %}
+      </div>
     </div>
-    {% block page_footer %}
-    <div class="page-footer">
-      this is my foot
-    </div>
-    {% endblock page_footer %}
   </body>
 </html>
+
