--- a/static/style.css
+++ b/static/style.css
@@ -6,23 +6,42 @@ html, body {
 }
 
 .container {
-  background-color: #DDDDBA;
 }
 
 .header {
+  -moz-box-shadow: 0 0 10px #000000;
+  -webkit-box-shadow: 0 0 10px #000000;
+  box-shadow: 0 0 1px #000000;
+  width: 100%;
+  float: left;
+  clear: both;
   text-align: center;
-  margin: 0px;
   background-color: #F0C030;
 }
 
 #menu {
+  width: 100%;
+  float: left;
+  clear: both;
   background-color: #F0F0C0;
 }
 
 .page-content{
+  -moz-box-shadow: inset 0 0 10px #000000;
+  -webkit-box-shadow: inset 0 0 10px #000000;
+  box-shadow: inset 0 0 10px #000000;
+  width: 100%;
+  float: left;
+  clear: both;
 }
 
 .page-footer {
+  -moz-box-shadow: 0 0 10px #000000;
+  -webkit-box-shadow: 0 0 10px #000000;
+  box-shadow: 0 0 1px #000000;
+  width: 100%;
+  float: left;
+  clear: both;
   text-align: center;
   background: #F0C030;
 }
