--- a/static/style.css
+++ b/static/style.css
@@ -9,9 +9,8 @@ html, body {
 }
 
 .header {
-  -moz-box-shadow: 0 0 10px #000000;
-  -webkit-box-shadow: 0 0 10px #000000;
-  box-shadow: 0 0 1px #000000;
+  text-shadow: 2px 2px 4px #000;
+  
   width: 100%;
   float: left;
   clear: both;
@@ -30,15 +29,13 @@ html, body {
   -moz-box-shadow: inset 0 0 10px #000000;
   -webkit-box-shadow: inset 0 0 10px #000000;
   box-shadow: inset 0 0 10px #000000;
+  
   width: 100%;
   float: left;
   clear: both;
 }
 
 .page-footer {
-  -moz-box-shadow: 0 0 10px #000000;
-  -webkit-box-shadow: 0 0 10px #000000;
-  box-shadow: 0 0 1px #000000;
   width: 100%;
   float: left;
   clear: both;
