--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,5 @@
 html, body {
+  font-family: monospace;
   max-width: 800px;
   height: 95%;
   margin: 0 auto;
@@ -8,28 +9,69 @@ html, body {
 .container {
 }
 
+.firstcharacter {
+  float: left;
+  color: #903;
+  font-size: 75px;
+  line-height: 60px;
+  padding-top: 4px;
+  padding-right: 8px;
+  padding-left: 3px;
+}
+
 .header {
+  text-align: left;
+  font-size: 350%;
   text-shadow: 2px 2px 4px #000;
-  
   width: 100%;
   float: left;
   clear: both;
-  text-align: center;
   background-color: #F0C030;
 }
 
 #menu {
+  font-size: 175%;
   width: 100%;
-  float: left;
   clear: both;
+  float: left;
   background-color: #F0F0C0;
 }
 
+#menu #holder {
+  height: 64px;
+}
+
+#menu #holder ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+#menu #holder ul li a {
+  text-decoration: none;
+  float: left;
+  margin-right: 5px;
+  line-height: 23px;
+  color: #000;
+  border: 1px solid #000;
+  border-bottom: none;
+  padding: 20px;
+  width: 150px;
+  text-align: center;
+  display: block;  
+}
+
+#menu #holder ul li a:hover {
+  background :#F90;
+  color: #FFF;
+  text-shadow: 1px 1px 1px #000;
+}
+
 .page-content{
-  -moz-box-shadow: inset 0 0 10px #000000;
-  -webkit-box-shadow: inset 0 0 10px #000000;
-  box-shadow: inset 0 0 10px #000000;
-  
+  border-top: 1px solid #000;
+  border-bottom: 1px solid #000;
+  border-left: 1px solid #000;
+  border-right: 1px solid #000;
   width: 100%;
   float: left;
   clear: both;
