--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -9,19 +9,16 @@
     <div class="container">
       <div class="header">
         {% block page_header %}
-        <menu>
-          <span class="firstcharacter">J</span> acob Farnsworth
-        </menu>
+        <h1>Jacob Farnsworth</h1>
+          <h2>programming and web design</h2>
         {% endblock page_header %}
       </div>
       <div id="menu">
-        <div id="holder">
-          <ul>
-            <li><a href="/about_me">Who am I?</a></li>
-            <li><a href="/resume">Hire Me</a></li>
-            <li><a href="/index">Index</a></li>
-          </ul>
-        </div>
+        <menu>
+          <span>
+            <a href="/template/pages/index">Home</a>
+          </span>
+        </menu>
       </div>
       <div class="page-content">
         {% block content %}
