custom 404.html displays, but not updating with edited content.  Why?

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -16,7 +16,7 @@
       <div id="menu">
         <menu>
           <span>
-            <a href="/template/pages/index">Home</a>
+            <a href="/wtf/why?/index">Home</a>
           </span>
         </menu>
       </div>
