--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -16,7 +16,9 @@
       <div id="menu">
         <menu>
           <span>
-            <a href="/wtf/why?/index">Home</a>
+            <a href="/">Welcome</a>
+            <a href="/about_me">Who Am I?</a>
+            <a href="/resume">Hire Me</a>
           </span>
         </menu>
       </div>
