fixed 404 page.  Should I style it?

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -18,7 +18,7 @@
           <span>
             <a href="/">Welcome</a>
             <a href="/about_me">Who Am I?</a>
-            <a href="/resume">Hire Me</a>
+            <a href="/blah/blah/resume">Hire Me</a>
           </span>
         </menu>
       </div>
