--- a/templates/404.html
+++ b/templates/404.html
@@ -1,10 +1,13 @@
 {% extends "layouts/base.html" %}
-
 {% block content %}
-<h1>
-  Dude, you could have knocked first...
-</h1>
+<p>
+  404 page not found
+</p>
+<p>
+  Dude, you could have knocked first..
+</p>
 <p>
   Well, this is embarassing.  I'll, um, you know, put something on now, K?
 </p>
 {% endblock %}
+{% block page_footer %}{% endblock page_footer %}
