--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -15,10 +15,10 @@
       </div>
       <div id="menu">
         <menu>
-          <span>
-            <a href="/">Welcome</a>
-            <a href="/about_me">Who Am I?</a>
-            <a href="/resume">Hire Me</a>
+          <span> 
+            <a href="/">&ltWelcome&gt</a>
+            <a href="/about_me">&ltWho Am I?&gt</a>
+            <a href="/blah/blah/resume">&ltHire Me&gt</a>
           </span>
         </menu>
       </div>
