--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -9,24 +9,15 @@
     <div class="container">
       <div class="header">
         {% block page_header %}
-        <h1>Jacob Farnsworth</h1>
-          <h2>programming and web design</h2>
         {% endblock page_header %}
       </div>
       <div id="menu">
         <menu>
-<<<<<<< HEAD
-          <span> 
+          <span><strong>
             <a href="/">&ltWelcome&gt</a>
-            <a href="/about_me">&ltWho Am I?&gt</a>
-            <a href="/blah/blah/resume">&ltHire Me&gt</a>
-=======
-          <span>
-            <a href="/">Welcome</a>
-            <a href="/about_me">Who Am I?</a>
-            <a href="/blah/blah/resume">Hire Me</a>
->>>>>>> FETCH_HEAD
-          </span>
+            <a href="/about_me">&ltWhy&gt</a>
+            <a href="/resume">&ltHire Me&gt</a>
+        </span></strong>
         </menu>
       </div>
       <div class="page-content">
@@ -35,7 +26,6 @@
       </div>
       <div class="page-footer">
         {% block page_footer %}
-        this is my foot
         {% endblock page_footer %}
       </div>
     </div>
