--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,9 +2,16 @@
 
 {% block content %}
 <h1>
-  Now What?
+  My name is Jacob
 </h1>
-<p>
-  I think maybe I should just delete this page...
-</p>
+<h1>
+  I'd like to build
+</h1>
+<h1>
+  <span class="declaration">your</span>
+  website
+</h1>
+<form action="/resume">
+  <button>Hire Me</button>
+</form>
 {% endblock %}
