--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,17 +1,72 @@
 {% extends "layouts/base.html" %}
 
 {% block content %}
-<h1>
-  My name is Jacob
-</h1>
-<h1>
-  I'd like to build
-</h1>
-<h1>
-  <span class="declaration">your</span>
-  website
-</h1>
-<form action="/resume">
-  <button>Hire Me</button>
-</form>
+<h2>My name is Jacob and I'd like to work for you.</h2>
+<h2>When i'm not studying code and building websites, like this one,
+  I love brewing beer and taking great 
+  <a href="http://www.baroquebloke.com">photographs</a>, 
+  and i'm quite good at both.</h2>
+
+<h2>But how about the gritty details?</h2>
+
+<h3>Education</h3>
+<ul>
+  <li><b>Bachelor of Music <i>2014</i> - Oberlin Conservatory of Music</b></li>
+  <ul>
+    <li>major: baroque flute performance</li>
+    <li>Conservatory Dean's Scholar</li>
+  </ul>
+  <li><b>CRR de Paris, France <i>2011 - 2012</i></b></li>
+  <ul>
+    <li>French baroque music studies</li>
+  </ul>
+  <li><b>Campus Langues, Paris <i>2012 - 2013</i></b></li>
+  <ul>
+    <li>French language studies</li>
+  </ul>
+  <li><b>Florida State University <i>2006 - 2008</i></b></li>
+  <ul>
+    <li>coursework: general studies and flute performance</li>
+  </ul>
+</ul>
+<h3>Work Experience</h3>
+<ul>
+  <li><b>Pipe Organ Technical Assistant <i>2009 - present</i></b></li>
+  <ul>
+    <li>Trained under supervision of Hal Gober, curator of Organs
+        for Oberlin Conservatory.  Responsible for general maintenance of 
+        Oberlin's numerous pipe organs</li>
+  </ul>
+  <li><b>Sales Assistant and Fabricator for Country Popcorn, 
+      Paris France <i>2011 - 2013</i></b></li>
+  <ul>
+    <li>Responsible for care of the work truck, set up and maintenance of
+        equipment</li>
+    <li>Cooked kettle corn by hand</li>
+    <li>Interacted with large crowds of diverse nationalities and 
+        languages</li>
+  </ul>
+  <li><b>Freelance Construction Work <i>2009 - present</i></b></li>
+  <ul>
+    <li>framing, drywall instalation, demolition, remodeling, electrical, 
+        and plumbing projects</li>
+  </ul>
+</ul>
+<h3>Relevant Coursework</h3>
+<ul>
+  <li>Python Programming, winter term projects working independently, 
+    website design</li>
+</ul>
+<h3>Skills</h3>
+<ul>
+  <li>Strong knowledge of operating systems and maintenance of Linux, 
+    Mac OS X, and Windows</li>
+  <li>Computer programming and web design</li>
+  <li>Photography experience using many types of cameras, equipment, 
+    and techniques</li>
+  <li>Photo editing including Photoshop and Aperture</li>
+  <li>Working proficiency in French</li>
+  <li>Competency with power tools, woodworking, and general construction 
+    techniques</li>
+</ul>
 {% endblock %}
