--- a/templates/pages/resume.html
+++ b/templates/pages/resume.html
@@ -1,10 +1,6 @@
 {% extends "layouts/base.html" %}
 
 {% block content %}
-
-<h2>
-  RESUME
-</h2>
 <h3>
   Education
 </h3>
@@ -27,6 +23,15 @@
     <p>coursework: general studies and flute performance</p>
   </li>
 </ul>
+<h3>
+  Work Experience
+</h3>
+<ul>
+  <li>
+    <b>Pipe Organ Technical Assistant</b>, <i>2009 - present</i>
+    <p>Trained under supervision of Hal Gober, curator of organs for 
+      Oberlin Conservatory.  Responsible for general maintenance of 
+      Oberlin's numerous pipe organs.</p>
 
 
 {% endblock %}
