added resume.pdf download link

--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -9,6 +9,11 @@
 
 <h2>But how about the gritty details?</h2>
 
+<div id="res-dl">
+<a href="/static/FarnsworthResume.pdf" download="Jacob Farnsworth's Resume">
+  Click here</a> to download  my resume in PDF form
+</div>
+
 <h3>Education</h3>
 <ul>
   <li><b>Bachelor of Music <i>2014</i> - Oberlin Conservatory of Music</b></li>
