header style adjustment

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -9,17 +9,10 @@
     <div class="container">
       <div class="header">
         {% block page_header %}
-        <h1>Farnsworth Programming and Web Design</h1>
+        <h1>Farnsworth&raquo<br>&laquoprogramming and web design&raquo</br></h1>
         {% endblock page_header %}
       </div>
-      <div class="page-menu">
-        <!--
-        <menu>
-            <a href="/index">Welcome</a>
-            <a href="/about_me">About Me</a>
-            <a href="/resume">Hire Me</a>
-        </menu>
-        -->
+      <div class="menu">
       </div>
       <div class="page-content">
         {% block content %}
