--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -4,8 +4,7 @@
 <h2>My name is Jacob and I'd like to work for you.</h2>
 <h2>When i'm not studying code and building websites, like this one,
   I love brewing beer and taking great 
-  <a href="http://www.baroquebloke.com">photographs</a>, 
-  and i'm quite good at both.</h2>
+  <a href="http://www.baroquebloke.com">photographs</a>.</h2>
 
 <h2>But how about the gritty details?</h2>
 
