--- a/static/style.css
+++ b/static/style.css
@@ -1,31 +1,31 @@
 html {
   max-width: 800px;
-  background: #ABABAB;
   margin: 0 auto;
 }
 .container {
 }
 .header {
   width: 100%;
-  background: yellow;
-  text-align: center;
+  text-align: auto;
+  line-height: 200%;
   float: left;
 }
-/*.page-menu {
-  width: 100%;
-  background: gray;
+h1:first-child:first-letter {
   float: left;
-  clear: both;
-}*/
+  color: #903;
+  font-size: 90px;
+  line-height: 60px;
+  padding-top: 4px;
+  padding-left: 3px;
+  font-family: monospace;
+}
 .page-content {
   width: 100%;
-  background: green;
   float: left;
   clear: both;
 }
 .page-footer {
   width: 100%;
-  background: blue;
   text-align: center;
   float: left;
 }
