--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,18 +1,19 @@
 {% extends "layouts/base.html" %}
 
 {% block content %}
-<h2>My name is Jacob and I'd like to work for you.</h2>
-<h2>When i'm not studying code and building websites, like this one,
-  I love brewing beer and taking great 
+<h2>My name is Jacob and I love code.
+When i'm not studying code and building websites, like this one,
+  I love brewing beer and shooting great 
   <a href="http://www.baroquebloke.com">photographs</a>.</h2>
 
-<h2>But how about the gritty details?</h2>
+<h1>But how about the gritty details?</h1>
 
-<div id="res-dl">
+<div class="res-dl">
 <a href="/static/FarnsworthResume.pdf" download="Jacob Farnsworth's Resume">
-  Click here</a> to download  my resume in PDF form
+  Click here to download  my resume in PDF</a>
 </div>
 
+<div class="resume">
 <h3>Education</h3>
 <ul>
   <li><b>Bachelor of Music <i>2014</i> - Oberlin Conservatory of Music</b></li>
@@ -73,4 +74,5 @@
   <li>Competency with power tools, woodworking, and general construction 
     techniques</li>
 </ul>
+</div>
 {% endblock %}
