added, moved links to menu

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -13,6 +13,13 @@
         {% endblock page_header %}
       </div>
       <div class="menu">
+        <h2>My name is Jacob and I love code.  I put lots of stuff up on 
+          <a href="http://github.com/baroquebloke">GitHub</a>.  When I'm not
+          studying code I'm usually brewing beer or indulging in 
+          <a href="http://www.baroquebloke.com">my photography</a>.  Feel 
+          free to <a href="/static/FarnsworthResume.pdf" 
+            download="Jacob Farnsworth's Resume">download my resume</a> or
+          scroll down to read it here.</h2>
       </div>
       <div class="page-content">
         {% block content %}
