--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -19,7 +19,8 @@
           <a href="http://www.baroquebloke.com">my photography</a>.  Feel 
           free to <a href="/static/FarnsworthResume.pdf" 
             download="Jacob Farnsworth's Resume">download my resume</a> or
-          scroll down to read it here.</h2>
+          scroll down to read it here.  Got questions?  Feel free to 
+          <a href="mailto:jake@baroquebloke.com">contact me</a> any time.</h2>
       </div>
       <div class="page-content">
         {% block content %}
