--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="header">
         {% block page_header %}
-        <h1>Farnsworth&raquo<br>&laquoProgramming and Web Design&raquo</br></h1>
+        <h1>Farnsworth<br>Programming and Web Design</br></h1>
         {% endblock page_header %}
       </div>
       <div class="menu">
