more style changes
getting closer

--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -7,23 +7,22 @@
   </head>
   <body>
     <div class="container">
-      <div class="header">
+      <img src="/static/jake.png" alt="Photo of Jacob" class="pic"/>
+      <div class="header">  
         {% block page_header %}
-        <h1>Farnsworth<br>Programming and Web Design</br></h1>
+        <h1>Jacob Farnsworth</h1>
         {% endblock page_header %}
       </div>
       <div class="menu">
-        <h2>My name is Jacob and I love code.  I put lots of stuff up on 
-          <a href="http://github.com/baroquebloke" 
-            title="Follow me on GitHub">GitHub</a>.  When I'm not
+        <h2><em>My name is Jacob and I love code.  I put lots of stuff up on 
+          <a href="http://github.com/baroquebloke">GitHub</a>.  When I'm not
           studying code I'm usually brewing beer or indulging in 
-          <a href="http://www.baroquebloke.com"
-            title="My blog, baroquebloke.com">My Photography</a>. 
-          <a href="/static/FarnsworthResume.pdf" 
-            download="Jacob Farnsworth's Resume"
-            title="My resume!">Download my resume</a> or 
-          read it below.  Have some questions?   
-          <a href="mailto:jake@baroquebloke.com">Contact me</a>.</h2>
+          <a href="http://www.baroquebloke.com">My Photography</a>. 
+          Please feel free to <a href="/static/FarnsworthResume.pdf" 
+            download="Jacob Farnsworth's Resume">Download My Resume</a> or 
+          read it below.  And, if you have some questions please don't
+          hesitate to
+          <a href="mailto:jake@baroquebloke.com">Contact Me</a>.</em></h2>
       </div>
       <div class="page-content">
         {% block content %}
