--- a/static/style.css
+++ b/static/style.css
@@ -1,42 +1,39 @@
 html {
-  background: url("/static/louvre.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  max-width: 100%;
+  width: 800px;
   margin: 0 auto;
-  font-family: AppleGothic;
+  font-family: AppleGothic; 
+  background-color: #f7f7f7;
 }
-.container {
+.container { 
+}
+.pic {
+  position: relative;
+  width: 30%;
+  border: 5px solid #903;
+  border-radius: 50%;
+  left: 70%;
+  float: left;
+  clear: both;
 }
 .header {
- /* background: url("/static/louvre.jpg");*/
   width: 100%;
-  margin-top: 0;
-  text-align: left;
-  height: 400px;
-  font-size: 125%;
+  margin-top: -23%;
+  line-height: 0;
+  border-bottom: 5px solid #903;
+  letter-spacing: 5px;
+  word-spacing: 10px;
+  font-size: 125%; 
   float: left;
-}
-h1:first-child:first-letter {
-  float: left;
-  color: #903;
-  text-shadow: 2px 2px 1px #001F3F;
-  font-size: 100px;
-  line-height: 60px;
-  padding-top: 4px;
-  padding-right: 5px;
-  padding-left: 3px;
-  font-family: Big Caslon;
+  clear: both;
 }
 .menu {
-  max-width: 800px;
-  font-size: 125%;
-  margin-top: 10%;
-  margin-bottom: 180px;
-  text-align: center;
-  margin: 0 auto;
+  width: 70%;
+  font-size: 70%;
+  margin-top: -100px;
+  text-align: left;
+  color: #666666;
+  float: left;
+  clear: both;
 }
 a {
   font-size: 125%;
@@ -57,9 +54,11 @@ a:active {
   top: 2px;
 }
 .page-content {
-  max-width: 800px;
-  font-size: 93%;
-  margin: 0 auto;
+  max-width: 90%;
+  font-size: 105%;
+  line-height: 150%;
+  padding-top: 5%;
+  margin-left: 10%;
   clear: both;
 }
 .page-footer {
