--- a/templates/layouts/base.html
+++ b/templates/layouts/base.html
@@ -10,7 +10,7 @@
       <img src="/static/jake.png" alt="Photo of Jacob" class="pic"/>
       <div class="header">  
         {% block page_header %}
-        <h1>Jacob Farnsworth</h1>
+        <h1>&nbspJacob Farnsworth</h1>
         {% endblock page_header %}
       </div>
       <div class="menu">
@@ -23,6 +23,27 @@
           read it below.  And, if you have some questions please don't
           hesitate to
           <a href="mailto:jake@baroquebloke.com">Contact Me</a>.</em></h2>
+      </div>
+      <div class="note" id="personal">
+        <h2>Having diligently done my time in higher education in pursuit of
+          a music degree, I've decided to finally embrace my inner nerd.  I 
+          have always been facinated by computers, technologie, gadgets,
+          and mischief. Taking things apart makes me feel like a kid.  Putting 
+          things back together again makes me feel like Einstein.  Making 
+          things that actually work makes me think I'm Neo.  You know, flying
+          around the Matrix and shit...</h2>
+      </div>
+      <div class="note" id="skillz">
+        <h2>I am proficient in Python, and largly self taught in HTML,
+          CSS3, and Flask.  I am also good a juggling multiple challanges such as
+          finishing a degree while simultainiously planning a wedding (my own), 
+          working numerous jobs (see resume below), and teaching my self web 
+          design.</h2>
+      </div>
+      <div class="note" id="whyHire">
+        <h2>Guess what?!  I'd like to work with you!  I'm looking to participate 
+          in a competant team that will allow me to contribute new and unique
+          ideas as well as continue to grow faster than I ever could on my own.</h2>
       </div>
       <div class="page-content">
         {% block content %}
