--- a/static/style.css
+++ b/static/style.css
@@ -4,12 +4,15 @@ html {
   font-family: AppleGothic; 
   background-color: #f7f7f7;
 }
-.container { 
+.container {
 }
 .pic {
   position: relative;
   width: 30%;
   border: 5px solid #903;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -o-border-radius: 50%;
   border-radius: 50%;
   left: 70%;
   float: left;
@@ -52,6 +55,45 @@ a:hover {
 }
 a:active {
   top: 2px;
+}
+.note {
+  position: relative;
+  border: 5px solid #903;
+  margin: 30px;
+  padding: 10px;
+  text-align: center;
+  float: left;
+  clear: both;
+}
+#personal {
+  -webkit-border-radius: 0 50px;
+  -moz-border-radius: 0 50px;
+  -o-border-radius: 0 50px;
+  border-radius: 0 50px;
+  -webkit-transform: rotate(-5deg);
+  -moz-transform: rotate(-5deg);
+  -o-transform: rotate(-5deg);
+  transform: rotate(-5deg);
+}
+#skillz {
+  -webkit-border-radius: 50px 0;
+  -moz-border-radius: 50px 0;
+  -o-border-radius: 50px 0;
+  border-radius: 50px 0;
+  -webkit-transform: rotate(5deg);
+  -moz-transform: rotate(5deg);
+  -o-transform: rotate(5deg);
+  transform: rotate(5deg);
+}
+#whyHire {
+  -webkit-border-radius: 0 50px;
+  -moz-border-radius: 0 50px;
+  -o-border-radius: 0 50px;
+  border-radius: 0 50px;
+  -webkit-transform: rotate(-5deg);
+  -moz-transform: rotate(-5deg);
+  -o-transform: rotate(-5deg);
+  transform: rotate(-5deg);
 }
 .page-content {
   max-width: 90%;
